fixes and testing...

--- a/vagrant/testserver/Vagrantfile
+++ b/vagrant/testserver/Vagrantfile
@@ -4,7 +4,7 @@
 Vagrant.configure(2) do |config|
 
     if Vagrant.has_plugin?("vagrant-hostmanager") then
-      config.hostmanager.enabled = false
+      config.hostmanager.enabled = true
       config.hostmanager.manage_host = true
       config.hostmanager.ignore_private_ip = false
       config.hostmanager.include_offline = true
@@ -15,7 +15,7 @@ Vagrant.configure(2) do |config|
     config.vm.define "phpdizf2test" do |node|
 
         node.vm.box = "ubuntu/trusty32"
-        node.vm.hostname = "phpdizf2test"
+        node.vm.hostname = "phpdizf2test.local"
 
         # config.vm.network "private_network", ip: "192.168.33.22"
         node.vm.network "forwarded_port", guest: 80, host: 8888
@@ -23,11 +23,8 @@ Vagrant.configure(2) do |config|
         node.vm.synced_folder "../../", "/var/www/mysite"
         node.vm.provision :shell, path: "bootstrap.sh"
 
-        node.hostmanager.aliases = "phpdizf2test.local"
+        # node.hostmanager.aliases = "phpdizf2test.local"
 
     end
-
-
-
 
 end
